[package]
name = "screeps-api-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "^1.5.1"
scraper = "^0.12.0"
clap = "3.0.0-beta.5"
log = "^0.4.14"
simplelog = "^0.10.0"
color-eyre = "^0.5"
http = "^0.2.5"
